# Sesame

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rust-toolchain.toml  sample-config.toml
alohomora/: Cargo.toml
alohomora/example/: example.rs  expanded.rs
alohomora/src/: extension.rs  extensions.rs  fold.rs  fold_in.rs  lib.rs  pcr.rs  pure.rs  sandbox.rs  tahini_pure.rs  type.rs  unbox.rs
alohomora/tests/: end_to_end.rs  get_route.rs  json_route.rs  orm.rs  post_route.rs  test.rs
alohomora_derive/: Cargo.toml
alohomora_derive/src/: alohomora_type.rs  bin.rs  bin2.rs  form.rs  json.rs  lib.rs  no_fold_in.rs  policy.rs  render.rs  sandbox.rs  tahini_service.rs  tahini_type.rs
alohomora_derive/tests/: alohomora_type.rs  form.rs  json.rs  no_fold_in.rs  render.rs  route.rs  schema_policy.rs
alohomora_lint/alohomora_type_derived/: Cargo.toml  README.md
alohomora_lints/: Cargo.toml  README.md  rust-toolchain  rust-toolchain.toml  sign.sh  sign_deps.sh  sign_pcr.sh
alohomora_lints/examples/: alohomora_pcr_illegal.rs  alohomora_pcr_illegal.stderr  alohomora_pcr_illegal_blank_signature.rs  alohomora_pcr_illegal_copy_signature.rs  alohomora_pcr_illegal_fn_changes.rs  alohomora_pcr_legal.rs  alohomora_pcr_legal_basic_call.rs  alohomora_sandbox_illegal.rs  alohomora_sandbox_illegal.stderr  alohomora_sandbox_legal.rs  alohomora_sandbox_transfer_illegal.rs  alohomora_sandbox_transfer_illegal.stderr  alohomora_sandbox_transfer_legal.rs  alohomora_sandboxable_illegal.rs  alohomora_sandboxable_illegal.stderr  alohomora_sandboxable_legal.rs  alohomora_type_illegal.rs  alohomora_type_illegal.stderr  alohomora_type_legal.rs
alohomora_lints/src/: alohomora_pcr.rs  alohomora_sandbox.rs  alohomora_sandbox_identity_transfer.rs  alohomora_sandbox_transfer.rs  alohomora_sandboxable.rs  alohomora_type.rs  lib.rs
alohomora_policy/: Cargo.toml  rust-toolchain.toml
alohomora_policy/src/: access_control.rs  context.rs  join.rs  lib.rs  reason.rs  user.rs
alohomora_sandbox/: Cargo.toml
alohomora_sandbox/src/: alloc.rs  copy.rs  gen_impl.rs  instance.rs  lib.rs  prim_impl.rs  ptr.rs  sandbox.rs  sandboxable.rs  str_impl.rs  swizzle.rs  timings.rs  vec.rs  vec_impl.rs
applications/youchat/: Cargo.toml  Makefile  README.md  UPDATES.md  build.rs  rust-toolchain.toml  sample-config.toml
bbox/: Cargo.toml
bbox/src/: bbox.rs  context.rs  db.rs  forms.rs  lib.rs  policy.rs  render.rs
bbox_derive/: Cargo.toml
bbox_derive/src/: alohomora_type.rs  form.rs  lib.rs  magic_unbox.rs  policy.rs  render.rs
bbox_derive/tests/: alohomora_type.rs  form.rs  magic_unbox.rs  policy.rs  render.rs  route.rs  schema_policy.rs
example/myapp/: Cargo.toml  build.rs  scrutinizer-config.toml
example/myapp_lib/: .gitignore  Cargo.toml
harness/: Cargo.toml  Makefile  plotting.py  rust-toolchain.toml  sample-config.toml  sandbox_hash.py  sandbox_train.py
harness/benches/: answer_questions_bench.json  boxed_answer_questions_bench.json  boxed_get_aggregates_bench.json  boxed_get_discussion_leader_bench.json  boxed_get_discussion_leader_naive_bench.json  boxed_get_employer_info_bench.json  boxed_predict_grades_bench.json  boxed_register_users_bench.json  boxed_retrain_model_bench.json  boxed_view_answers_bench.json  boxed_view_answers_naive_bench.json  get_aggregates_bench.json  get_discussion_leader_bench.json  get_employer_info_bench.json  predict_grades_bench.json  register_users_bench.json  retrain_model_bench.json  view_answers_bench.json
harness/src/: main.rs  schema.sql
harness/templates/: gradeedit.html.hbs  leclist.html.hbs
my_example/: Cargo.toml  build.rs  sign-linux.sh
my_example/src/: main.rs  sesame.rs
pcon_indirection_benchmark/: Cargo.toml  build.rs
pcon_indirection_benchmark/src/: main.rs
pcr_examples/: Cargo.toml  README.md
pcr_examples/avoid_false_positives/: Cargo.toml
pcr_examples/blank_sign_illegal/: Cargo.toml
pcr_examples/const_change_illegal/: Cargo.toml
pcr_examples/copy_sign_illegal/: Cargo.toml
pcr_examples/dep_change_illegal/: Cargo.toml
pcr_examples/dependency/: Cargo.toml
pcr_examples/false_positives/: Cargo.toml
pcr_examples/fn_calls_legal/: Cargo.toml
pcr_examples/pcr/: Cargo.lock_hash  main-{closure#0}.rs  main-{closure#0}_hash.rs  main-{closure#1}.rs  main-{closure#1}_hash.rs
pcr_examples/rec_change_illegal/: Cargo.toml
portfolio_harness/: Cargo.toml  Makefile
portfolio_harness/src/: main.rs
sandbox_bench/bench/: Cargo.toml  build.rs  out  out.txt  plotting.py
sandbox_bench/bench_lib/: .gitignore  Cargo.toml  build.rs  wasm32-rlbox.json
sandbox_example/myapp/: Cargo.toml
sandbox_harness/: Cargo.toml  Makefile  plotting.py
sandbox_harness/src/: bin.rs
sesame/: Cargo.toml  notes.txt
sesame/core/: Cargo.toml  build.rs
sesame/derive/: Cargo.toml
sesame/lints/: .gitignore  Cargo.toml  README.md  sign.sh
sesame/mysql/: Cargo.toml
sesame/orm/: Cargo.toml  structs.todo
sesame/rocket/: Cargo.toml
sesame/sandbox/: Cargo.toml
struct_fold/: Cargo.toml  Makefile
struct_fold/src/: data_policy.rs  main.rs
websubmit/: Cargo.toml  backend.rs
websubmit-boxed/: Cargo.toml  apikey.rs  backend.rs  build.rs  login.rs  rust-toolchain.toml  sample-config.toml
websubmit-boxed/src/: admin.rs  apikey.rs  args.rs  backend.rs  config.rs  grades.rs  helpers.rs  login.rs  main.rs  manage.rs  policies.rs  predict.rs  questions.rs  schema.sql
websubmit-boxed/templates/: login.html.hbs  predict.html.hbs
websubmit/src/: admin.rs  apikey.rs  args.rs  backend.rs  config.rs  email.rs  grades.rs  index.rs  lib.rs  login.rs  main.rs  manage.rs  predict.rs  questions.rs
websubmit/templates/: answers.html.hbs  login.html.hbs
websubmit_boxed_sandboxes/: Cargo.toml  build.rs
websubmit_boxed_sandboxes/src/: lib.rs
youchat/: .get_diff.sh  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
youchat/src/: backend.rs  buggy.rs  chat.rs  common.rs  config.rs  context.rs  groupchat.rs  lib.rs  login.rs  policies.rs
youchat/templates/: chat.html.hbs  login.html.hbs
youchat/tests/: basic_tests.rs  common.rs  (+1 more)
(+628 files in other folders)
