[workspace]
members = [
    "alohomora",
    "alohomora_derive",
    "alohomora_build",
    "alohomora_lints",
    "alohomora_sandbox",
    "sandbox_example/myapp",
    "sandbox_example/myapp_lib",
    "websubmit",
    "websubmit_boxed",
    "websubmit_boxed_sandboxes",
]

[workspace.metadata.dylint]
libraries = [
    { path = "./alohomora_lints" },
]
