[package]
name = "alohomora"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[lib]
name = "alohomora"
path = "src/lib.rs"

[dependencies]
alohomora_derive = { version = "0.1.0", path = "../alohomora_derive", optional = true }
futures = "0.3.17"
serde = "1.0"
rocket = "0.5.0-rc.1"
figment = "0.10.6"
lazy_static = "1.4.0"
erased-serde = "0.3.25"
mysql = "21.0.2"
mysql_common = "0.22"
dynfmt = { version = "0.1.5", features = ["curly"] }
small_ctor = "0.1.0"
cookie = { version = "0.15", features = ["percent-encode"] }
time = { version = "0.2.11", default-features = false, features = ["std"] }
indexmap = "1.7.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.handlebars]
features = ["dir_source"]

[features]
default = ["derive"]
derive = ["alohomora_derive"]
