[package]
name = "alohomora"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[lib]
name = "alohomora"
path = "src/lib.rs"

[dependencies]
alohomora_derive = { version = "0.1.0", path = "../alohomora_derive", optional = true }
alohomora_sandbox = { path = "../alohomora_sandbox" }
sea-orm = { git = "https://github.com/KinanBab/sea-orm.git", branch = "main", features = [ "sqlx-mysql", "runtime-tokio-native-tls" ] }
either = "1.10.0"
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main", features= ["json"] }
figment = "0.10.6"
lazy_static = "1.4.0"
erased-serde = "0.3.25"
mysql = "21.0.2"
mysql_common = "0.22"
dynfmt = { version = "0.1.5", features = ["curly"] }
small_ctor = "0.1.0"
cookie = { version = "0.15", features = ["percent-encode"] }
time = { version = "0.2.11", default-features = false, features = ["std"] }
indexmap = "1.7.0"
itertools = "0.12.1"

[dependencies.rocket_dyn_templates]
git = "https://github.com/KinanBab/Rocket.git"
branch = "main"
#version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.sea-orm-rocket]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"

[dependencies.handlebars]
version = "3.5.5"
features = ["dir_source"]

[features]
default = ["derive"]
derive = ["alohomora_derive"]

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }
