[package]
name = "alohomora_derive"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[lib]
name = "alohomora_derive"
proc-macro = true

[dependencies]
attribute-derive = "0.8.1"
proc-macro2 = "1.0.58"
quote = "1.0.27"
rocket_http = { git = "https://github.com/KinanBab/Rocket.git", branch = "main" }
serde = "1.0"
syn = { version = "2.0.16", features = [ "full" ] }

[dev-dependencies]
alohomora = { version = "0.1.0", path = "../alohomora" }
mysql = "21.0.2"
erased-serde = "0.3.25"
serde_json = "1.0.68"