[package]
name = "alohomora_lints"
version = "0.1.0"
authors = ["corinn_tiffany@brown.edu"]
description = "Lints for ensuring Alohomora applications respect Alohomora static requirements"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "alohomora_type_illegal"
path = "examples/alohomora_type_illegal.rs"

[[example]]
name = "alohomora_type_legal"
path = "examples/alohomora_type_legal.rs"

[[example]]
name = "alohomora_sandbox_illegal"
path = "examples/alohomora_sandbox_illegal.rs"

[[example]]
name = "alohomora_sandbox_legal"
path = "examples/alohomora_sandbox_legal.rs"

[dependencies]
base64 = "0.22.0"
paste = "1.0"
clippy_utils = { git = "https://github.com/artemagvanian/rust-clippy-nightly-2023-04-12", rev = "88cd75c5ecb95c4dfbe8ebc4dd5732edd8652ed8" }
dylint_linting = "2.5.0"
if_chain = "1.0.2"
reqwest = { version = "0.12.2", features = ["blocking"] }
scrutils = { path = "../../alohomora-sign/scrutinizer/scrutils" }
# TODO change scrutils dep to git = "https://github.com/artemagvanian/scrutinizer.git"

[dev-dependencies]
dylint_testing = "2.5.0"
alohomora = { path = "../alohomora" }
alohomora_sandbox = { path = "../alohomora_sandbox" }

[package.metadata.rust-analyzer]
rustc_private = true
