[package]
name = "alohomora_lints"
version = "0.1.0"
authors = ["corinn_tiffany@brown.edu", "alexander_portland@brown.edu", "kinan_dak_albab@brown.edu"]
description = "Lints for ensuring Alohomora applications respect Alohomora static requirements"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "alohomora_type_illegal"
path = "examples/alohomora_type_illegal.rs"

[[example]]
name = "alohomora_type_legal"
path = "examples/alohomora_type_legal.rs"

[[example]]
name = "alohomora_sandbox_illegal"
path = "examples/alohomora_sandbox_illegal.rs"

[[example]]
name = "alohomora_sandbox_legal"
path = "examples/alohomora_sandbox_legal.rs"

[[example]]
name = "alohomora_sandbox_transfer_legal"
path = "examples/alohomora_sandbox_transfer_legal.rs"

[[example]]
name = "alohomora_sandbox_transfer_illegal"
path = "examples/alohomora_sandbox_transfer_illegal.rs"

[[example]]
name = "alohomora_pcr_legal"
path = "examples/alohomora_pcr_legal.rs"

[[example]]
name = "alohomora_pcr_illegal"
path = "examples/alohomora_pcr_illegal.rs"

[dependencies]
base64 = "0.22.0"
paste = "1.0"
clippy_utils = { git = "https://github.com/artemagvanian/rust-clippy-nightly-2023-04-12", rev = "88cd75c5ecb95c4dfbe8ebc4dd5732edd8652ed8" }
dylint_linting = "=2.5.0"
if_chain = "1.0.2"
reqwest = { version = "0.12.2", features = ["blocking"] }
# TODO change scrutils dep to git = "https://github.com/artemagvanian/scrutinizer.git"
# make sure this points to the `pcr-signing` branch of scrutils
scrutils = { path = "../../scrutinizer/scrutils" }
syn = { version = "2.0.58", features = ["full"]}
quote = "1.0.37"
proc-macro2 = "1.0.86"

[dev-dependencies]
dylint_testing = "=2.5.0"
alohomora = { path = "../alohomora" }
alohomora_sandbox = { path = "../alohomora_sandbox" }

[package.metadata.rust-analyzer]
rustc_private = true

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }
