[package]
name = "alohomora_sandbox"
version = "0.1.0"
authors = ["Kinan Dak Albab <kinan.bab.14@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinytemplate = "1.1"
cargo_toml = "0.19.2"
alohomora_derive = { path = "../alohomora_derive" }
linfa-linear = "0.7.0"
chrono = "0.4.38"
mysql = "21.0.2"

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }
