[package]
name = "alohomora_sandbox"
version = "0.1.0"
authors = ["Kinan Dak Albab <kinan.bab.14@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.0", features = ["serde"] }

[features]
default = []
sandbox_timing = []
