[package]
name = "bbox"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[lib]
name = "bbox"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
rocket = "0.5.0-rc.1"
figment = "0.10.6"
lazy_static = "1.4.0"
#bbox_derive = { version = "0.1.0", optional = true, path = "../bbox_derive" }
erased-serde = "0.3.25"
mysql = "21.0.2"
mysql_common = "0.22"
dynfmt = { version = "0.1.5", features = ["curly"] }
small_ctor = "0.1.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.handlebars]
features = ["dir_source"]
