[package]
name = "harness"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[dependencies]
alohomora = { path = "../alohomora" }
chrono = "0.4.37"
fake = { version = "2.9.2", features = ["derive", "chrono"] }
rand = "0.8.5"
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_html_form = "0.2.6"

websubmit = { path = "../websubmit" }
websubmit_boxed = { path = "../websubmit_boxed" }

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[features]
boxed = []
unboxed = []
