[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alohomora = { path = "../alohomora", features = ["derive"] }

[build-dependencies]
alohomora_build = { path = "../alohomora_build" }

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[workspace.metadata.dylint]
libraries = [
    { path = "../alohomora_lints" },
]
