[package]
name = "pcon_indirection_benchmark"
version = "0.1.0"
authors = ["Sarah Ridley <sridley@cs.brown.edu>"]
edition = "2018"
build = "build.rs"

[dependencies]
alohomora = { path = "../alohomora", default_features = false, features = ["derive"] }
bitvec = "0.22.3"
chrono = "0.4.31"
mysql = "21.0.2"
mysql_common = "0.22"
serde = "1.0.195"
toml = "0.2.1"
slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
rand = "0.8"

[build-dependencies]
alohomora_build = { path = "../alohomora_build" }

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }