[workspace]
members = [
    "blank_sign_illegal",
    "const_change_illegal",
    "copy_sign_illegal",
    "dep_change_illegal",
    "dependency",
    "fn_calls_legal",
    "rec_change_illegal", 
]

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[workspace.metadata.dylint]
libraries = [
    { path = "../alohomora_lints" },
]