[package]
name = "sandbox_harness"
version = "0.1.0"
authors = ["Allen Aby <allen.aby@gmail.com>"]
edition = "2018"

[[bin]]
name = "bin"
path = "src/bin.rs"

[dependencies]
alohomora = { path = "../alohomora/", default_features = false, features = ["derive", "sandbox_timing"] }
chrono = { version = "0.4.0", features = ["serde"] }
linfa-linear = "0.6.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websubmit_boxed_sandboxes = { path = "../websubmit_boxed_sandboxes", features = ["sandbox_timing"] }

[build-dependencies]
alohomora_build = { path = "../alohomora_build" }

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[workspace.metadata.dylint]
libraries = [
    { path = "../alohomora_lints" },
]
