[workspace]
resolver = "2"
members = [
    "build",
    "core",
    "derive",
    "examples/sandbox-bin",
    "mysql",
    "orm",
    "rocket",
    "sandbox",
]

exclude = [
    "tests/**",
]

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }
