[workspace]
resolver = "2"
members = [
    "build",
    "core",
    "derive",
    "examples/sandbox_bin",
    "examples/sandbox_lib",
    "mysql",
    "orm",
    "rocket",
    "sandbox",
]

exclude = [
    "lints/",
]

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }
