[package]
name = "websubmit-boxed"
version = "0.1.0"
authors = ["Malte Schwarzkopf <malte@cs.brown.edu>"]
edition = "2018"

[dependencies]
alohomora = { path = "../alohomora" }
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.33.0"
lazy_static = "1.4.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
linfa = "0.6.1"
linfa-linear = "0.6.1"
mysql = "*"
mysql_common = "0.22"
ndarray = "0.15.6"
rand = "0.8.4"
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main" }
rust-crypto = "0.2.36"
slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
toml = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_dyn_templates]
git = "https://github.com/KinanBab/Rocket.git"
branch = "main"
features = ["handlebars", "tera"]

[dependencies.handlebars]
features = ["dir_source"]
