[package]
name = "alohomora_type_derived"
version = "0.1.0"
authors = ["corinn_tiffany@brown.edu"]
description = "denies manual implementations of AlohomoraType"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/libalohomora_type_derived@nightly-2023-10-06-aarch64-apple-darwin.dylib"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "b105fb4c39bc1a010807a6c076193cef8d93c109" }
dylint_linting = "2.5.0"
if_chain = "1.0.2"

[dev-dependencies]
dylint_testing = "2.5.0"

[package.metadata.rust-analyzer]
rustc_private = true
