[package]
name = "youchat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sesame = { path = "../../sesame/core", default_features = false, features = ["derive"] }
sesame_mysql = { path = "../../sesame/mysql", default_features = false, features = ["derive"] }
sesame_rocket = { path = "../../sesame/rocket", default_features = false, features = ["derive", "mysql"] }
chrono = "0.4.31"
mysql = "21.0.2"
rand = "0.8.5"
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main", features= ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.36.0"
toml = "0.2.1"

[dependencies.rocket_dyn_templates]
git = "https://github.com/KinanBab/Rocket.git"
branch = "main"
#version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.handlebars]
features = ["dir_source"]

[dev-dependencies]
serde_json = "1.0.114"

[replace]
"bitvec:0.22.3" = { git = "https://github.com/KinanBab/bitvec.git", branch = "yanked" }
"ahash:0.8.11" = { git = "https://github.com/KinanBab/aHash.git", branch = "main" }

[build-dependencies]
sesame_build = { path = "../../sesame/build" }

#[workspace.metadata.dylint]
#libraries = [
#    { path = "../../sesame/lints" },
#]
