cargo-features = ["profile-rustflags"]

[package]
name = "myapp"
version = "0.1.0"
authors = ["Kinan Dak Albab <kinan.bab.14@gmail.com>"]
edition = "2018"

[[bin]]
name = "bin"
path = "src/bin.rs"

[dependencies]
alohomora = { path = "../../alohomora/", default_features = false, features = ["derive"] } #, "sandbox_timing"] }
myapp_lib = { path = "../myapp_lib" }

[build-dependencies]
alohomora_build = { path = "../../alohomora_build" }

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[workspace.metadata.dylint]
libraries = [
    { path = "../../alohomora_lints" },
]
