[package]
name = "myapp_lib"
version = "0.1.0"
authors = ["Kinan Dak Albab <kinan.bab.14@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
alohomora_derive = { path = "../../alohomora_derive" }
alohomora_sandbox = { path = "../../alohomora_sandbox" } #, features = ["sandbox_timing"] }

[build-dependencies]
bindgen = "0.69.1"
alohomora_build = { path = "../../alohomora_build" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata]
sandboxes = [
  "add_numbers",
  "div_numbers",
  "mult_numbers"
]
