cargo-features = ["profile-rustflags"]

[package]
name = "fn_calls_legal"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
alohomora = { path = "../../alohomora" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
alohomora_build = { path = "../../alohomora_build" }