[package]
name = "bench_lib"
version = "0.1.0"
authors = ["Allen Aby <allen.aby@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
# These should be alohomora dependencies?
chrono = { version = "0.4.0", features = ["serde"] }
linfa = "0.6.1"
linfa-linear = "0.6.1"
ndarray = "0.15.6"
sha2 = "0.10.8"
alohomora_derive = { path = "../../alohomora_derive" }
alohomora_sandbox = { path = "../../alohomora_sandbox" }
once_cell = "1.19.0"

[build-dependencies]
bindgen = "0.69.1"
alohomora_build = { path = "../../alohomora_build" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata]
sandboxes = [
  # "hash",
  "train2",
  # "alloc_in_sandbox",
  # "transfer_arg"
]
