[package]
name = "bench_lib"
version = "0.1.0"
authors = ["Allen Aby <allen.aby@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
# These should be alohomora dependencies?
chrono = { version = "0.4.0", features = ["serde"] }
linfa = "0.6.1"
linfa-linear = "0.6.1"
ndarray = "0.15.6"
sha2 = "0.10.8"
alohomora_derive = { path = "../../alohomora_derive" }
alohomora_sandbox = { path = "../../alohomora_sandbox" }
# alohomora = { path = "../../alohomora", default-features = false }
once_cell = "1.19.0"

[build-dependencies]
bindgen = "0.69.1"
alohomora_build = { path = "../../alohomora_build" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata]
sandboxes = [
  "hash",
  "train",
  "train2",
  "stringy"
  # "alloc_in_sandbox",
  # "transfer_arg"
]

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }